[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.13"
name = "noki-bin-dumpper"
version = "1.0.2"
description = "Albion Online Bin Dumper"
authors = [{name = "Brendown Ferreira", email = "br3n0k@gmail.com"}]
license = { text = "Freeware" }
dependencies = [
    "xmltodict",
    "black",
    "cryptography",
    "flake8",
    "isort",
    "mypy",
    "packaging",
    "pydantic",
    "pyinstaller",
    "pytest",
    "pytest-cov",
    "requests",
    "rich",
    "tqdm",
    "typer"
]

[project.scripts]
main = "main:main"

[tool.setuptools]
packages = ["src",]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.poetry.scripts]
run = "python -m main"
build = "pyinstaller --onefile main.py"
test = "pytest"
lint = "flake8" 